--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
 	"name": "opensourcepal",
-	"version": "1.0.0",
+	"version": "0.0.0-development",
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "webpack --watch --progress --config webpack.config.js"
+		"dev": "webpack --watch --progress --config webpack.config.js",
+		"semantic-release": "semantic-release --branches main"
 	},
 	"author": "",
 	"license": "ISC",
@@ -16,8 +17,22 @@
 	},
 	"devDependencies": {
 		"copy-webpack-plugin": "^11.0.0",
+		"cz-conventional-changelog": "^3.3.0",
 		"html-webpack-plugin": "^5.5.3",
 		"webpack": "^5.88.2",
-		"webpack-cli": "^5.1.4"
+		"webpack-cli": "^5.1.4",
+		"semantic-release": "^21.0.7"
+	},
+	"config": {
+		"commitizen": {
+			"path": "./node_modules/cz-conventional-changelog"
+		}
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Dun-sin/OpenSourcePal.git"
+	},
+	"publishConfig": {
+		"access": "restricted"
 	}
 }
