--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
 		"typescript": "^5.1.6"
 	},
 	"devDependencies": {
+		"autoprefixer": "^10.4.15",
 		"copy-webpack-plugin": "^11.0.0",
+		"css-loader": "^6.8.1",
 		"cz-conventional-changelog": "^3.3.0",
 		"html-webpack-plugin": "^5.5.3",
+		"postcss": "^8.4.27",
+		"postcss-loader": "^7.3.3",
+		"semantic-release": "^21.0.7",
+		"style-loader": "^3.3.3",
+		"tailwindcss": "^3.3.3",
 		"webpack": "^5.88.2",
-		"webpack-cli": "^5.1.4",
-		"semantic-release": "^21.0.7"
+		"webpack-cli": "^5.1.4"
 	},
 	"config": {
 		"commitizen": {
