--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "webpack --watch --progress --config webpack.config.js",
+		"dev": "webpack --watch --stats-error-details --progress --config webpack.config.js",
 		"semantic-release": "semantic-release"
 	},
 	"author": "",
@@ -16,6 +16,10 @@
 		"typescript": "^5.1.6"
 	},
 	"devDependencies": {
+		"@types/chrome": "^0.0.243",
+		"@types/react": "^18.2.20",
+		"@types/react-dom": "^18.2.7",
+		"@types/webextension-polyfill": "^0.10.1",
 		"autoprefixer": "^10.4.15",
 		"copy-webpack-plugin": "^11.0.0",
 		"css-loader": "^6.8.1",
@@ -26,6 +30,7 @@
 		"semantic-release": "^21.0.7",
 		"style-loader": "^3.3.3",
 		"tailwindcss": "^3.3.3",
+		"webextension-polyfill": "^0.10.0",
 		"webpack": "^5.88.2",
 		"webpack-cli": "^5.1.4"
 	},
