--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "webpack --watch --stats-error-details --progress --config webpack.config.js",
+		"dev": "webpack --watch --stats-error-details --progress --config webpack.dev.js",
+		"build": "webpack --progress --config webpack.prod.js",
 		"semantic-release": "semantic-release"
 	},
 	"author": "",
@@ -16,6 +17,7 @@
 		"typescript": "^5.1.6"
 	},
 	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.9",
 		"@types/chrome": "^0.0.243",
 		"@types/react": "^18.2.20",
 		"@types/react-dom": "^18.2.7",
@@ -32,7 +34,8 @@
 		"tailwindcss": "^3.3.3",
 		"webextension-polyfill": "^0.10.0",
 		"webpack": "^5.88.2",
-		"webpack-cli": "^5.1.4"
+		"webpack-cli": "^5.1.4",
+		"webpack-merge": "^5.9.0"
 	},
 	"config": {
 		"commitizen": {
