--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"dotenv-webpack": "^8.0.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-loader-spinner": "^5.3.4",
 		"ts-loader": "^9.4.4",
 		"typescript": "^5.1.6"
 	},
