feat(content script): make sidebar and add animation
fix #1

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "author": "",
     "dependencies": {
         "@iconify/react": "^4.1.1",
+        "@react-spring/web": "^9.7.3",
         "clean-webpack-plugin": "^4.0.0",
         "copy-webpack-plugin": "^11.0.0",
         "core-js": "^3.32.0",
