--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,6 +2,6 @@
     "tabWidth": 4,
     "semi": true,
     "singleQuote": true,
-    "useTabs": false,
-    "printWidth": 120
+    "useTabs": true,
+    "printWidth": 200
 }
