--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
         "eslint-webpack-plugin": "^4.0.1",
         "postcss": "^8.4.27",
         "postcss-loader": "^7.3.3",
-        "prettier": "^3.0.0",
+        "prettier": "^3.0.2",
+        "prettier-plugin-tailwindcss": "^0.5.3",
         "semantic-release": "^21.0.7",
         "tailwindcss": "^3.3.3",
         "ts-loader": "^9.4.4",
