feat: use ai to get help on issues

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"core-js": "^3.32.0",
 		"cross-env": "^7.0.3",
 		"css-loader": "^6.8.1",
+		"detect-url-change": "^1.0.2",
 		"dotenv": "^16.3.1",
 		"html-webpack-plugin": "^5.5.3",
 		"markdown-to-jsx": "^7.3.2",
