feat: add option to get help for issues

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"copy-webpack-plugin": "^11.0.0",
 		"core-js": "^3.32.0",
 		"cross-env": "^7.0.3",
+		"cryptojs": "^2.5.3",
 		"css-loader": "^6.8.1",
 		"detect-url-change": "^1.0.2",
 		"dotenv": "^16.3.1",
