--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
 	"dependencies": {
 		"@iconify/react": "^4.1.1",
 		"@react-spring/web": "^9.7.3",
+		"@types/crypto-js": "^4.2.1",
 		"clean-webpack-plugin": "^4.0.0",
 		"copy-webpack-plugin": "^11.0.0",
 		"core-js": "^3.32.0",
 		"cross-env": "^7.0.3",
+		"crypto-js": "^4.2.0",
 		"cryptojs": "^2.5.3",
 		"css-loader": "^6.8.1",
 		"detect-url-change": "^1.0.2",
