--- a/src/baseManifest_chrome.json
+++ b/src/baseManifest_chrome.json
@@ -1,7 +1,7 @@
 {
 	"name": "__MSG_appName__",
 	"author": "Dun-sin",
-	"version": "3.0",
+	"version": "1.0",
 	"manifest_version": 3,
 	"description": "__MSG_appDescription__",
 	"icons": {
@@ -20,15 +20,17 @@
 	"background": {
 		"service_worker": "background/background.js"
 	},
-	"permissions": ["tabs", "storage", "webNavigation", "webRequest", "bookmarks", "identity", "activeTab"],
-	"host_permissions": ["<all_urls>"],
+	"permissions": ["tabs", "storage", "webNavigation", "identity", "activeTab"],
+	"host_permissions": ["https://github.com/"],
 	"options_ui": {
 		"page": "options/index.html"
 	},
 	"action": {
 		"default_icon": {
 			"16": "assets/icons/icon-16.png",
-			"48": "assets/icons/icon-48.png"
+			"24": "assets/icons/icon-24.png",
+			"64": "assets/icons/icon-64.png",
+			"128": "assets/icons/icon-128.png"
 		},
 		"default_title": "Open Source Pal",
 		"default_popup": "popup/index.html"
@@ -36,7 +38,7 @@
 	"web_accessible_resources": [
 		{
 			"resources": ["assets/*", "content/*", "options/*", "popup/*", "background/*"],
-			"matches": ["<all_urls>"]
+			"matches": ["*://github.com/*"]
 		}
 	]
 }
