--- a/src/baseManifest_chrome.json
+++ b/src/baseManifest_chrome.json
@@ -37,7 +37,7 @@
 	},
 	"web_accessible_resources": [
 		{
-			"resources": ["assets/*", "content/*", "options/*", "popup/*", "background/*"],
+			"resources": ["assets/*", "content/*", "options/*", "popup/*", "background/*", "onBoarding/*"],
 			"matches": ["*://github.com/*"]
 		}
 	]
