--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
         "editor.formatOnSave": false
     },
     "editor.codeActionsOnSave": {
-        "source.fixAll": true
+      "source.fixAll": "explicit"
     },
     "editor.tabSize": 2,
     "editor.defaultFormatter": "esbenp.prettier-vscode",
