--- a/.env_sample
+++ b/.env_sample
@@ -1,4 +1,4 @@
 GITHUB_SECRET=<githubsecret>
 GITHUB_ID=<gtihubid>
 SERVERURL=http://localhost:4000/api
-OPENAI_API_KEY=<apikey>
+API_KEY=<geminiapikey>
