--- a/frontend/src/baseManifest_edge.json
+++ b/frontend/src/baseManifest_edge.json
@@ -1,7 +1,7 @@
 {
 	"name": "__MSG_appName__",
 	"author": "Dun-sin",
-	"version": "1.5.2",
+	"version": "1.5.3",
 	"manifest_version": 3,
 	"description": "__MSG_appDescription__",
 	"icons": {
@@ -13,18 +13,30 @@
 	"default_locale": "en",
 	"content_scripts": [
 		{
-			"matches": ["http://github/*", "https://github/*"],
+			"matches": ["http://github.com/*", "https://github.com/*"],
 			"js": ["content/content.js"]
 		}
 	],
 	"background": {
 		"service_worker": "background/background.js"
 	},
-	"host_permissions": ["http://*/*", "https://*/*"],
+	"permissions": ["tabs", "storage", "identity"],
+	"host_permissions": ["https://github.com/"],
+	"options_page": "options/index.html",
+	"browser_action": {
+		"default_icon": {
+			"16": "assets/icons/icon-16.png",
+			"24": "assets/icons/icon-24.png",
+			"64": "assets/icons/icon-64.png",
+			"128": "assets/icons/icon-128.png"
+		},
+		"default_title": "Open Source Pal",
+		"default_popup": "popup/index.html"
+	},
 	"web_accessible_resources": [
 		{
-			"resources": ["assets/*", "content/*", "options/*", "popup/*", "background/*"],
-			"matches": ["<all_urls>"]
+			"resources": ["assets/*", "content/*", "options/*", "popup/*", "background/*", "onBoarding/*"],
+			"matches": ["*://github.com/*"]
 		}
 	]
 }
