--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -1,41 +1,44 @@
 name: Upload Built files
 
 on:
-    push:
-        branches:
-            - main
+  push:
+    branches:
+      - main
 
 jobs:
-    upload:
-        name: Build and Upload files on Artifact
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v3
-            - uses: actions/setup-node@v3
-              with:
-                  node-version: 20.0.0
+  upload:
+    name: Build and Upload files on Artifact
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./apps/opensourcepal
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20.0.0
 
-            - name: Build
-              run: |
-                  npm ci
-                  npm run upload
-            - name: Uploading Chrome Extension
-              uses: actions/upload-artifact@v3
-              with:
-                  name: chrome
-                  path: dist/chrome
-            - name: Uploading Firefox Extension
-              uses: actions/upload-artifact@v3
-              with:
-                  name: firefox
-                  path: dist/firefox
-            - name: Uploading Opera Extension
-              uses: actions/upload-artifact@v3
-              with:
-                  name: opera
-                  path: dist/opera
-            - name: Uploading Edge Extension
-              uses: actions/upload-artifact@v3
-              with:
-                  name: edge
-                  path: dist/edge
+      - name: Build
+        run: |
+          npm ci
+          npm run upload
+      - name: Uploading Chrome Extension
+        uses: actions/upload-artifact@v3
+        with:
+          name: chrome
+          path: dist/chrome
+      - name: Uploading Firefox Extension
+        uses: actions/upload-artifact@v3
+        with:
+          name: firefox
+          path: dist/firefox
+      - name: Uploading Opera Extension
+        uses: actions/upload-artifact@v3
+        with:
+          name: opera
+          path: dist/opera
+      - name: Uploading Edge Extension
+        uses: actions/upload-artifact@v3
+        with:
+          name: edge
+          path: dist/edge
